# food-recsys

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.py  users.json
.github/instructions/: Recommendation System.instructions.md  System Requiremens.instructions.md
docs/: api-reference.md  architecture.md  database-schema.md  development.md
src/: __init__.py  config.py
src/api/: __init__.py  routes.py
src/pipeline/: __init__.py  batch_processor.py
src/services/: __init__.py  clip_embedder.py  gemini_extractor.py  gemma_extractor.py  neo4j_service.py  recommendation_service.py
src/visualization/: __init__.py  dish_aggregator.py  recommendation_page.py  similarity.py  streamlit_app.py
